# sintia-tu-voz-digital-copia

./: .env  .gitignore  CLAUDE.md  index.html  tailwind.config.ts
.github/workflows/: deploy-ai-service.yml
apps/ai-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/ai-service/migrations/: 001_create_jobs_table.sql  002_create_meeting_quality_reports.sql
apps/ai-service/scripts/: backfill_embeddings.py
apps/ai-service/src/ai_service/: config.py  database.py  main.py
apps/ai-service/src/ai_service/agents/auditor/: agent.py  handler.py  repository.py  schemas.py
apps/ai-service/src/ai_service/agents/meeting/: agents.py  context.py  handler.py  repository.py  runner.py  schemas.py  tools.py
apps/ai-service/src/ai_service/api/: audit.py  health.py  router.py  webhooks.py
apps/ai-service/src/ai_service/handlers/: __init__.py  registry.py  transcribe.py
apps/ai-service/src/ai_service/jobs/: __init__.py  models.py  repository.py  worker.py
apps/ai-service/tests/: conftest.py  test_health.py
src/: App.tsx  index.css
src/components/: AppLayout.tsx  AudioPlayer.tsx  AudioRecorder.tsx  DevTestPanel.tsx  ErrorBoundary.tsx  EvidenceChip.tsx  StatusBadge.tsx
src/contexts/: AuthContext.tsx  OrgContext.tsx
src/features/analysis/: index.ts  (+9 more)
src/hooks/: useAuth.ts  useMeetingBundle.ts  useOrganization.ts
src/pages/: Auth.tsx  Dashboard.tsx  Landing.tsx  MeetingDetail.tsx  NewMeeting.tsx  SettingsPage.tsx
src/services/: apiClient.ts
supabase/: config.toml
supabase/migrations/: 20260219033817_27eb3824-ac6b-4de8-84cb-d3e81845709d.sql  (+16 more)
(+20 files in other folders)
